fix: overflow

--- a/packages/client/src/css/index.css
+++ b/packages/client/src/css/index.css
@@ -8,6 +8,7 @@ html, body{
   padding:0;
   margin: 0;
   background: #202326;
+  overflow: hidden;
 }
 
 #root{
